# OpenGLEngine

./: CMakelists.txt
Assets/Shaders/: main.frag  main.vert
Libraries/glad/: CMakeLists.txt
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt  main.cpp
Source/Render/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
Source/Singleton/: CMakeLists.txt  ISingleton.h
Source/Utils/: CMakeLists.txt  InitOpenGl.h  OpenGl.h  stb_image.h
Source/Window/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
